# cloakhaven-platform

./: .gitignore  README.md
backend/: pyproject.toml
backend/app/: cli.py  config.py  database.py  main.py
backend/app/middleware/: auth.py  rate_limit.py
backend/app/models/: __init__.py  audit_log.py  dispute.py  finding.py  partner_key.py  public_profile.py  purchased_report.py  score.py  social_account.py  user.py
backend/app/routers/: accounts.py  admin.py  auth.py  compliance.py  disputes.py  employer.py  findings.py  partner.py  payments.py  public.py  scan.py  score.py
backend/app/schemas/: auth.py  dispute.py  finding.py  public.py  score.py
backend/app/services/: archive_processor.py  content_classifier.py  email_service.py  enrichment_service.py  google_service.py  name_disambiguator.py  passive_scanner.py  public_data_sources.py  reddit_service.py  scoring_engine.py  scraping_service.py  twitter_service.py  youtube_service.py
backend/app/utils/: security.py
backend/static/: index.html
backend/static/assets/: index-BL10s4Lk.js  index-BOXx2cmP.js  index-BUb6lSaK.css  index-Bcyi5hO3.css  index-BqcBERph.js  index-C8pDtoUo.js  index-Cj4nTPmL.css  index-DLbp5R99.css  index-DpT-Ac1L.css  index-WjHxqxj0.css  index-mSCdrWn0.js  index-u6Cqc7Ke.js
backend/tests/: conftest.py  test_api.py  test_scoring_engine.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: ErrorBoundary.tsx  Footer.tsx  Logo.tsx  Navbar.tsx  Toast.tsx
frontend/src/hooks/: useDocumentTitle.ts
(+24 files in other folders)
